[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "A brief description of your project."
authors = ["Wenjie Xu <wenjie.xu.cn@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
numpy = "*"
scikit-learn = "*"
matplotlib = "*"
yaml = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
juptyer = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
